kubernetes/neo/apps/observability/loki/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-app
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: private-gateway
    namespace: istio-gateways
  hostnames:
  - "loki.${CLUSTER_DOMAIN}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ''
      kind: Service
      name: loki-headless
      port: 3100
      weight: 100
